--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ else()
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -fPIC")
 endif()
 
+set (BUILD_TREAT_WARNINGS_AS_ERRORS OFF CACHE BOOL "Treat compilation warnings as errors")
+
 # increase compiler warnings level (-W3 for MSVC, -Wextra for GCC)
 if (MSVC)
   if (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
@@ -22,8 +24,14 @@ if (MSVC)
   else()
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
   endif()
+  if (BUILD_TREAT_WARNINGS_AS_ERRORS)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")    
+  endif()
 elseif (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+  if (BUILD_TREAT_WARNINGS_AS_ERRORS)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")    
+  endif()
 endif()
 
 # Find OpenGL
