CI/CD - add run task

--- a/.github/workflows/build_wglinfo_mingw.yml
+++ b/.github/workflows/build_wglinfo_mingw.yml
@@ -39,6 +39,11 @@ jobs:
       run: |
         cmake --build "./build" --config Release
 
+    - name: Run wglinfo
+      run: |
+        build/wglinfo.exe
+        build/wglinfo.exe > wglinfo.log
+
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
