--- a/.github/workflows/build_wglinfo_windows_mingw.yml
+++ b/.github/workflows/build_wglinfo_windows_mingw.yml
@@ -33,19 +33,20 @@ jobs:
     - name: Configure wglinfo
       run: |
         mkdir "build"
-        cmake -G Ninja -D BUILD_TREAT_WARNINGS_AS_ERRORS=ON -S . -B "./build"
+        cmake -G Ninja -D BUILD_TREAT_WARNINGS_AS_ERRORS=ON -S . -B "./build" -D CMAKE_INSTALL_PREFIX="install"
 
     - name: Build wglinfo
       run: |
         cmake --build "./build" --config Release
+        cmake --build "./build" --config Release --target install
 
     - name: Run wglinfo
       run: |
-        build/wglinfo.exe
-        build/wglinfo.exe > wglinfo.log
+        install/wglinfo.exe
+        install/wglinfo.exe > install/wglinfo.log
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: wglinfo-mingw
-        path: build/wglinfo.exe
+        path: install
