--- a/wglinfo/CMakeLists.txt
+++ b/wglinfo/CMakeLists.txt
@@ -87,7 +87,9 @@ if (WIN32)
   set (USED_RCFILE   "wglinfo.rc")
   set (USED_MANFILES "wglinfo.manifest")
 endif()
-if (NOT APPLE)
+if (APPLE)
+  #set (CMAKE_OSX_DEPLOYMENT_TARGET "10.10" CACHE STRING "Minimum OS X deployment version" FORCE)
+else()
   foreach (aFileIter "CglContext.mm" "CocoaWindow.mm")
     set_source_files_properties (${aFileIter} PROPERTIES HEADER_FILE_ONLY TRUE)
   endforeach()
