Configuration, CMake - add OpenGL_GL_PREFERENCE=GLVND to suppress CMake warning on Linux

--- a/wglinfo/CMakeLists.txt
+++ b/wglinfo/CMakeLists.txt
@@ -53,6 +53,9 @@ elseif (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMP
 endif()
 
 # Find OpenGL
+if (NOT WIN32 AND NOT APPLE)
+  set (OpenGL_GL_PREFERENCE "GLVND")
+endif()
 find_package (OpenGL REQUIRED)
 
 set (USED_SRCFILES
