--- a/.github/workflows/build_wglinfo_linux_gcc.yml
+++ b/.github/workflows/build_wglinfo_linux_gcc.yml
@@ -18,12 +18,13 @@ jobs:
         sudo apt-get install -y \
           g++ cmake ninja-build \
           libgl-dev libegl-dev \
+          libwayland-dev wayland-protocols libxkbcommon-dev \
           xvfb
 
     - name: Configure wglinfo
       run: |
         mkdir "build"
-        cmake -G Ninja -D BUILD_TREAT_WARNINGS_AS_ERRORS=ON -S . -B "./build" -D CMAKE_INSTALL_PREFIX="install"
+        cmake -G Ninja -D BUILD_TREAT_WARNINGS_AS_ERRORS=ON -S . -B "./build" -D CMAKE_INSTALL_PREFIX="install" -D USE_WAYLAND=ON
 
     - name: Build wglinfo
       run: |
