CI/CD - add wasm32 build job

--- a/wglinfo/CMakeLists.txt
+++ b/wglinfo/CMakeLists.txt
@@ -175,3 +175,11 @@ endif()
 install (TARGETS "${PROJECT_NAME}"
          RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}"
          PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+if (EMSCRIPTEN)
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.wasm
+           DESTINATION "${CMAKE_INSTALL_PREFIX}")
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.js
+           DESTINATION "${CMAKE_INSTALL_PREFIX}")
+  install (FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.data
+           DESTINATION "${CMAKE_INSTALL_PREFIX}" OPTIONAL)
+endif()
