--- a/.github/workflows/build_wglinfo_linux_emsdk.yml
+++ b/.github/workflows/build_wglinfo_linux_emsdk.yml
@@ -2,10 +2,9 @@
 name: Build (Linux/Emsdk)
 
 on:
-  push:
-    branches: [ "master" ]
   # allows to run workflow manually
   workflow_dispatch:
+  workflow_call:
 
 # permissions of the GITHUB_TOKEN to allow deployment to Pages
 permissions:
@@ -18,7 +17,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-ubuntu-emsdk:
+  build-linux-emsdk:
     runs-on: ubuntu-24.04
     steps:
     - name: Checkout repository
@@ -51,7 +50,7 @@ jobs:
         cmake --build "./build" --config Release --target install
         cp ./install/wglinfo.html ./install/index.html
 
-    - name: Upload page artifacts
+    - name: Upload artifacts
       id: deployment
       uses: actions/upload-pages-artifact@v3
       with:
@@ -59,7 +58,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-ubuntu-emsdk
+    needs: build-linux-emsdk
+    if: ${{ github.ref == 'refs/heads/master' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
