--- a/.github/workflows/build_wglinfo_macos_clang.yml
+++ b/.github/workflows/build_wglinfo_macos_clang.yml
@@ -1,7 +1,8 @@
 # This workflow will build wglinfo on macOS
 name: Build (macOS/Clang)
 
-on: [push]
+on:
+  workflow_call:
 
 jobs:
   build-macos-arm64:
