--- a/.github/workflows/build_wglinfo_windows_mingw.yml
+++ b/.github/workflows/build_wglinfo_windows_mingw.yml
@@ -1,11 +1,11 @@
 # This workflow will build wglinfo on Windows
 name: Build (Windows/MinGW64)
 
-on: [push]
+on:
+  workflow_call:
 
 jobs:
   build-windows-mingw:
-    name: Build on Windows with GCC
     runs-on: windows-latest
     defaults:
       run:
